lazy load create, edit profile

--- a/src/app/pages/create-profile/create-profile.component.html
+++ b/src/app/pages/create-profile/create-profile.component.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12">* Might take a couple minutes for updates to take effect *</div>
+                    <div class="col-sm-12">* Must be JPG or JPEG. Might take a couple minutes for updates to take effect *</div>
                 </div>
             </form>
         </mat-card>
