--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -14,6 +14,10 @@ img.avatar {
     margin-top: -75px;
   }
 
+form {
+  margin: 0 20px;
+}
+
 .cover-photo {
   width: 100%;
   height: 35vh;
@@ -29,6 +33,10 @@ img.avatar {
   margin-top: 20px;
 }
 
+.mobile {
+  display: none;
+}
+
 @media only screen and (max-width: 575px) {
   .mt-3 {
     margin-top: unset !important;
@@ -40,5 +48,15 @@ img.avatar {
 
   .profile-details-row .name-location-row {
     margin-top: -10px;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .desktop {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
   }
 }
