--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+$primary: #283e4a;
+
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
