--- a/src/app/components/video/video.component.html
+++ b/src/app/components/video/video.component.html
@@ -14,12 +14,12 @@
         <div *ngIf="!showingVideo" class="outer showing-thumbnail">
             <div class="inner img-overlay-wrap" title="Click to play video">
                         <svg class="play-svg" clas xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5v9zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
-                    <img (click)="showVideo()" alt="{{video.title}} thumbnailnail" class="video-thumbnail pointer" [src]="video.thumbnailUrl">
+                    <img (click)="showVideo()" alt="{{video.title}} thumbnailnail" class="lazyload video-thumbnail pointer" data-src="{{video.thumbnailUrl}}">
             </div>
         </div>
         <div [hidden]="!showingVideo" class="embed-responsive embed-responsive-16by9">
-            <video #videoPlayer preload="none" controls="true" class="embed-responsive-item">
-                <source src="{{video.url}}" type="video/mp4" />
+            <video #videoPlayer controls="true" class="lazyload embed-responsive-item">
+                <source data-src="{{video.url}}" type="video/mp4" />
             </video>
         </div>
     </mat-card-content>
