--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -13,7 +13,9 @@
                     <div class="row justify-content-center" *ngIf="loading">
                         <mat-spinner></mat-spinner>
                     </div>
+                    <ng-container *ngIf="videographers">
                     <videographer-carousel [videographers]="videographers"></videographer-carousel>
+                </ng-container>
                 </mat-card-content>
             </mat-card>
 
