--- a/src/app/components/videographer-carousel/videographer-carousel.component.html
+++ b/src/app/components/videographer-carousel/videographer-carousel.component.html
@@ -1,7 +1,7 @@
 <owl-carousel [options]="mySlideOptions" [items]="videographers" [carouselClasses]="['owl-theme', 'sliding']">
   <div class="item" *ngFor="let videographer of videographers">
-    <img data-src="{{videographer.profilePic}}" alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}"
-      class="lazyload avatar pointer" routerLink="{{getLink(videographer)}}" />
+    <img src="{{videographer.profilePic}}" alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}"
+      class="avatar pointer" routerLink="{{getLink(videographer)}}" />
     <div class="pointer text-center" routerLink="{{getLink(videographer)}}">
       <h4 matLine class="bold name-link">
         {{videographer.firstName + ' ' + videographer.lastName}} </h4>
