--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,36 @@
-$primary: #283e4a;
+// $primary: #283e4a;
+$primary:#344955;
+$accent: #F9AA33;
+//$primary: #232F34;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+// // Import theming functions
+// @import '~@angular/material/theming';
+
+// @mixin candy-carousel-theme($theme) {
+//     // Extract the palettes you need from the theme definition.
+//     $primaryTheme: map-get($theme, $primaryColor);
+//     $accent: map-get($theme, $accent);
+  
+//     // Define any styles affected by the theme.
+//     .candy-carousel {
+//       // Use mat-color to extract individual colors from a palette.
+//       background-color: mat-color($primaryTheme);
+//       border-color: mat-color($accent, A400);
+//     }
+//   }
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.bg-primary {
+    background: #232F34;
+}
 
 .pointer{
     cursor: pointer;
@@ -18,6 +44,7 @@ mat-card {
     margin-bottom: 15px;
     margin-top: 15px;
     width: 100%;
+    color: $primary !important;
 }
 
 mat-form-field {
