--- a/src/app/components/add-edit-video/add-edit-video.component.html
+++ b/src/app/components/add-edit-video/add-edit-video.component.html
@@ -28,9 +28,9 @@
                             </mat-form-field>
                         </div>
                         <div *ngIf="!newVideo" class="col-sm-6">
-                            <button mat-raised-button color="primary" (click)="selectThumbnailPhoto($event)">Upload
+                            <button mat-raised-button [disabled]="resizingThumbnail" color="primary" (click)="selectThumbnailPhoto($event)">Upload
                                 Thumbnail
-                                Photo</button>
+                                Photo</button><small-spinner *ngIf="resizingThumbnail"></small-spinner>
                             <ng-container *ngIf="thumbnailPhoto">
                                 <span>{{thumbnailPhoto.name}}</span>
                                 <button mat-icon-button color="primary" (click)="removeThumbnailPhoto()">
@@ -62,7 +62,7 @@
                     <div class="row">
                         <div class="col-sm-12 justify-content-end">
                             <button mat-raised-button [routerLink]="['../']">Cancel</button>
-                            <button mat-raised-button type="submit">{{ newVideo ? "Save Video" : "Save Edits"}}</button>
+                            <button [disabled]="resizingThumbnail" mat-raised-button type="submit">{{ newVideo ? "Save Video" : "Save Edits"}}</button>
                         </div>
                     </div>
                     <div class="row">
