--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="col-sm-6">
                         <mat-form-field>
-                            <input matInput placeholder="Last Name" type="text" formControlName="lastName">
+                            <input disabled matInput placeholder="Last Name" type="text" formControlName="lastName">
                             <mat-error *ngIf="profileForm.get('lastName').hasError('pattern')">
                                 Last Name can only contain letters.
                             </mat-error>
@@ -68,6 +68,7 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-sm-12">* Images must be of type jpeg or jpg*</div>
                     <div class="col-sm-12">* Might take a couple minutes for updates to take effect *</div>
                 </div>
             </form>
