add mp4 to lazy loaded assets in service worker

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,4 +47,8 @@ mat-form-field {
   font-weight: bold !important;
 }
 
+.no-style-link {
+  text-decoration: none;
+}
+
 /*# sourceMappingURL=styles.css.map */
